miniextendr-macros/tests/ui/derive_dataframe_enum_no_variants.rs
//! Test: enum must have at least one variant.

use miniextendr_macros::DataFrameRow;

#[derive(DataFrameRow)]
enum Empty {}

fn main() {}
